<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="savvy.example.tapan.inandout.fragments.ShippingAddress">

    <TextView
        android:id="@+id/fragment_shipping_address"
        android:text="Shipping Address"
        android:padding="8sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:orientation="horizontal"
        android:padding="8sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/fragment_shipping_new_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/new_address" />

        <RadioButton
            android:id="@+id/fragment_shipping_existing_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/existing_address" />
    </RadioGroup>

    <EditText
        android:id="@+id/fragment_shipping_name"
        android:hint="@string/name"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:padding="4sp"
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:background="@drawable/edit_text_shape"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fragment_shipping_phone_number"
        android:hint="@string/phone"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:padding="4sp"
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:inputType="phone"
        android:background="@drawable/edit_text_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fragment_shipping_address_line_1"
        android:hint="@string/address1"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:padding="4sp"
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:inputType="text"
        android:background="@drawable/edit_text_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/fragment_shipping_city"
        android:hint="@string/city"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:padding="4sp"
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:inputType="text"
        android:background="@drawable/edit_text_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/fragment_shipping_state"
        android:hint="@string/state"
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:padding="4sp"
        android:inputType="text"
        android:background="@drawable/edit_text_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fragment_shipping_pin_number"
        android:hint="@string/pin"
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:padding="4sp"
        android:inputType="phone"
        android:background="@drawable/edit_text_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/fragment_shipping_payment_mode"
        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:padding="4sp"
        android:text="@string/pay_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:layout_marginLeft="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/payable_amount"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fragment_shipping_payble_amount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/rs"
            android:textColor="#000000"
            android:layout_marginRight="15sp"
            android:layout_marginEnd="15sp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/fragment_shipping_confirm_button"
        android:layout_marginTop="20sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
